# minibsdiff

./: .gitignore  .travis.yml  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  bsdiff.c  bsdiff.h  bspatch.c  bspatch.h  make.bat  makefile  minibsdiff-config.h  minibsdiff.c  release.nix  stdbool-msvc.h  test.c
